[package]
name = "typed_index_derive"
version = "0.1.4"

authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
repository = "https://github.com/matklad/typed_index_derive"
license = "MIT OR Apache-2.0"

categories =  [ "rust-patterns" ]
description = """
Custom derive to easily create newtype index types.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.14"
